--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "accounting": "^0.4.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
     "react": "^17.0.2",
